fix box's padding on mobile views

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -89,10 +89,14 @@
 .mb-1 { margin-bottom : 1rem; }
 .mb-2 { margin-bottom : 2rem; }
 .mb-3 { margin-bottom : 3rem; }
+.-mb-0p1 { margin-bottom : -0.1rem; }
+.-mb-0p2 { margin-bottom : -0.2rem; }
+.-mb-0p3 { margin-bottom : -0.3rem; }
+.-mb-0p4 { margin-bottom : -0.4rem; }
+.-mb-0p5 { margin-bottom : -0.5rem; }
 .-mb-1 { margin-bottom : -1rem; }
-.-mt-1 { margin-top : -1rem; }
-.-mt-2 { margin-top : -2rem; }
-.-mt-3 { margin-top : -3rem; }
+.-mb-2 { margin-bottom : -2rem; }
+.-mb-3 { margin-bottom : -3rem; }
 
 .ml-0 { margin-left : 0; }
 .ml-0p5 { margin-left : 0.5rem; }
